<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Narradir</string>
    <string name="app_version">5.5</string>
    <string name="app_name_and_version">Narradir Version 5.5</string>
    <string name="game_title_avalon">Avalon</string>
    <string name="help_intro_para0">\"The Resistance: Avalon\" is a game for 5–10 players, designed by Don Eskridge, developed by Travis Worthington, and published by Indie Boards and Cards. It is a trademark of Don Eskridge and Indie Boards and Cards.\n</string>
    <string name="help_intro_para1">\"Secret Hitler\" is a game for 5–10 players, created by Mike Boxleiter, Tommy Maranges, and Max Temkin, and published by Goat, Wolf, &amp; Cabbage LLC. It is copyrighted by Mike Boxleiter, Tommy Maranges, Max Temkin, and Goat, Wolf, &amp; Cabbage LLC.\n</string>
    <string name="help_intro_para2">For the avoidance of doubt, this app is not affiliated with or sponsored by Don Eskridge, Travis Worthington, Indie Boards and Cards, Mike Boxleiter, Tommy Maranges, Max Temkin, or Goat, Wolf, &amp; Cabbage LLC. No money was made through the distribution of this app.\n</string>
    <string name="help_subheading0">Using the app</string>
    <string name="help_subheading0_para0">You\'ll need the original \"The Resistance: Avalon\" and/or \"Secret Hitler\" games in order to use this app.\n</string>
    <string name="help_subheading0_para1">Choose the number of players along the top of the main screen. The range of roles that are available for selection will be automatically adapted to the number of players selected.\n</string>
    <string name="help_subheading0_para2">The special roles in \"The Resistance: Avalon\" are: Merlin, Assassin, Percival, Morgana, Mordred, and Oberon. Select the special roles that you’re using by tapping them on the main screen. Selected (active) roles will have a white frame around them.\n</string>
    <string name="help_subheading0_para3">Some selection rules will apply. For example, you cannot have Morgana without Percival, or Percival/Assassin/Morgana/Mordred without Merlin. In addition, in a 5-player game, you cannot have Percival without either Morgana or Mordred. Some roles will be automatically selected/deselected depending on the selection/deselection of other roles.\n</string>
    <string name="help_subheading0_para4">The only special role in \"Secret Hitler\" is Hitler himself. However, none of the roles in \"Secret Hitler\" can be selected/deselected directly.\n</string>
    <string name="help_subheading0_para5">Tap the Play button when you\'re ready for the night phase to begin (i.e. for all players to close their eyes and for the playback/narration of the introduction script).\n</string>
    <string name="help_subheading1">Customising settings</string>
    <string name="help_subheading1_para0">Tap the gear icon in the lower right corner to view the settings screen, which allows you to customize every aspect of the app.\n</string>
    <string name="help_subheading1_para1">On the Settings screen, tapping the Back button returns you to the main screen. Tapping the Help button displays this Help that you\'re reading now. Tapping the app creator\'s personal logo takes you to his website.\n</string>
    <string name="help_subheading1_subsubheading0">Narration settings</string>
    <string name="help_subheading1_subsubheading0_para0">The Narration Settings allow you to change the volume of the narration.\n</string>
    <string name="help_subheading1_subsubheading1">Background settings</string>
    <string name="help_subheading1_subsubheading1_para0">The Background Settings allow you to change the background sounds and their volume. These background sounds are played during the night phase (to help cover up any sounds made by players).\n</string>
    <string name="help_subheading1_subsubheading2">Role timer settings</string>
    <string name="help_subheading1_subsubheading2_para0">This timer determines the length of the pause during the action of the roles that wake up at night, namely: Merlin, Percival, the Agents of Evil (except Oberon), Hitler, and/or the Fascists).\n</string>
    <string name="help_subheading2">Tips</string>
    <string name="help_subheading2_para0">Tap and hold the image of each character to learn his/her role in the game.\n</string>
    <string name="help_subheading2_para1">When the app is active on the narration screen, as well as at any time an audio track is being played, the app prevents your device from going to sleep. If playing for extended periods of time, you should plug in your device or change the brightness to a low setting.\n</string>
    <string name="help_subheading2_para2">Notifications (calls, mail, messages, etc.) may interrupt the playback of the app, depending on how your notifications are set up.\n</string>
    <string name="help_subheading3">Credits</string>
    <string name="help_subheading3_para0">This app was developed by Li-Wei Yap. The code within this app is Copyright © 2021 Li-Wei Yap and licensed under the GNU General Public Licence v3.0. The code may not be reproduced without citation.\n</string>
    <string name="help_subheading3_para1">The assets within this app are licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Licence.\n</string>
    <string name="help_subheading3_para3">The character artwork for \"The Resistance: Avalon\" was designed entirely by Indie Boards and Cards and others including Luis Francisco, George Patsouras, Marco Turini, Pablo Messuti, and Luis Tomas. For the purposes of this app, the character artwork for \"The Resistance: Avalon\" was cartoonified using the Cartoon Photo Editor from Lyrebird Studio.\n</string>
    <string name="help_subheading3_para4">The character artwork for \"Secret Hitler\" was designed entirely by Mackenzie Schubert.\n</string>
    <string name="help_subheading3_para5">The app background was designed by \'Logos by Nick\'.\n</string>
    <string name="help_subheading3_para6">The ARKHAM fonts used in the app were designed by James Cianciaruso.\n</string>
    <string name="help_subheading3_para7">The gear icon in the settings button was taken from www.flaticon.com and designed by Freepik.\n</string>
    <string name="help_subheading3_para8">The voice of the narrator is \"en-US-Wavenet-B\" from the Text-to-Speech API of the Google Cloud SDK.\n</string>
    <string name="help_subheading3_para9">The cards background sound was taken from the YouTube Audio library. The rest of the background sounds were taken from SoundBible.com. The crickets background sound was recorded anonymously. The fireplace background sound was recorded by Daniel Simion. The rain background sound was recorded by Mark DiAngelo. The rainforest background sound was recorded by glorysunz. The rainstorm background sound was recorded by Mike Koenig. The wolves background sound was recorded by fws.gov.\n</string>
    <string name="help_subheading3_para10">The overall app design was inspired by the One Night Ultimate Werewolf app by Bezier Games, Inc., Ted Alspach, Andre Infante, Jonathan Casper, Jeremiah Maher, Akihisa Okui, Gus Batts, and Eric Summerer.\n</string>
    <string name="help_subheading3_para11">The app developer would like to express his deepest gratitude to Rui Xiang Peh, Isla Lim, Darrell Wong, Li-Toong Yap, and Sascha Böhrkircher for their generous help in the internal testing of the app and in providing valuable feedback.\n</string>
    <string name="help_subheading3_para12">The app developer sincerely apologises in advance if he has forgotten to acknowledge/credit anybody else who needs to be acknowledged/credited.\n</string>
    <string name="help_subheading4">Why the name \"Narradir\"\?</string>
    <string name="help_subheading4_para0">The name is a portmanteau of \"narrator\" and \"Nadir\", which is the last name of Abed, one of the main characters of the American television sitcom \"Community\". In one episode involving delicious chicken fingers, Abed narrated a good chunk of the story line, as if \"in a mafia movie\" (his own words). In two other episodes featuring Dungeons &amp; Dragons, Abed was the Dungeon Master, whose tasks include narration. The launcher icon of the app is also a reference to the school logo of Greendale Community College, which is the main setting of this sitcom.</string>
    <string name="privacy_intro_para0">Li-Wei Yap built the Narradir app (an Avalon/Secret Hitler Narrator app) as a Free app. This SERVICE is provided by Li-Wei Yap at no cost and is intended for use as is.\n</string>
    <string name="privacy_subheading0">Personal information collection and use</string>
    <string name="privacy_subheading0_para0">I do not collect, use, or share your Personal Information, period.\n</string>
    <string name="privacy_subheading0_para1">I physically can\'t. I have nowhere to store it. I don\'t even have a server database to store it. So even if Kim Jong-un asked nicely to see your data, I wouldn\'t have anything to show him.\n</string>
    <string name="privacy_subheading0_para2">Nonetheless, the app does use third party services that may collect information used to identify you.\n</string>
    <string name="privacy_subheading0_subsubheading0">Link to privacy policy of third party service providers used by the app</string>
    <string name="privacy_subheading1">Log data</string>
    <string name="privacy_subheading1_para0">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n</string>
    <string name="privacy_subheading2">Links to other sites</string>
    <string name="privacy_subheading2_para0">This Service contains a link to my personal website. If you click on the link, you will be directed to that site. I do not collect, use, or share any of your Personal Information on my website either. I do use the Google Search Console to see the number of clicks and impressions from visitors to my website. However, the Google Search Console does not give me the Personal Information of any of these visitors. Furthermore, the website is hosted on GitHub Pages. In addition, the website contains icons from JSDELIVR and Font Awesome, as well as fonts from Google Fonts. Please note that Google, GitHub, JSDELIVR, Font Awesome, and Google Fonts may collect User Personal Information from visitors to my website, including logs of visitor IP addresses, to comply with legal obligations, and to maintain the security and integrity of the website.\n</string>
    <string name="privacy_subheading2_subsubheading0">Links to privacy policy of these other sites</string>
    <string name="privacy_subheading3">Children\'s privacy</string>
    <string name="privacy_subheading3_subsubheading0">Please refer to the respective Children\'s Privacy Policies of Google Play Services, GitHub Pages, and JSDELIVR.</string>
    <string name="privacy_subheading4">Changes to this Privacy Policy</string>
    <string name="privacy_subheading4_para0">I may update my Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.\n</string>
    <string name="privacy_subheading4_para1">This policy is effective as of 11 April 2021.\n</string>
    <string name="privacy_subheading5">Contact me</string>
    <string name="privacy_subheading6">Acknowledgements</string>
    <string name="privacy_subheading6_para0">This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator, which was created by Nishant Srivastava and others.</string>
</resources>